2004-07-11  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/new_book_dialog.glade:

	Modified the ISBN text entry to allow 18 characters instead
	of 13.  

	* bin/pre-setup.rb:

	Added.  This generates bin/alexandria with a dummy #! line that
	will be replaced with the correct Ruby path by install.rb.

	* bin/alexandria:
	
	Removed.

	* bin/.cvsignore:

	Added.  Ignores bin/alexandria since it's now a generated file.

=== Alexandria 0.3.1 ===

2004-07-10  Laurent Sansonetti  <lrz@gnome.org>

	* NEWS:

	Updated for 0.3.1.

2004-07-10  Dafydd Harries  <daf@muse.19inch.net>

	* lib/alexandria/library.rb,
	  lib/alexandria/ui/new_book_dialog.rb:

	- Proper support for EAN numbers. Also, ISBN numbers are tidied more
	  consistently.

	* lib/alexandria/ui/main_app.rb:

	- Remove custom sorting functions as they appear not to make anything
	  work better and may actually cause some problems, such as bug #698.

2004-07-09  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers.rb,
	  lib/alexandria/book_providers/amazon.rb,
	  lib/alexandria/book_providers/proxis.rb,
	  lib/alexandria/ui/new_book_dialog.rb:

	- Improved exception handling ;
	- Fixed the Amazon provider to perform another lookup using the
	  next locale when the previous one gives no results.

2004-07-08  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers.rb:

	Fixed the providers calling mechanism (if a provider raises an
	exception we call the next one if any, otherwise we pass the exception
	to the main app). 

2004-07-05  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	- Fixed a bug when trying to sort icons by rating when books didn't
	  have rating yet ;
	- Fixed a bug in the sorting method (edition and publisher was
	  inversed).

2004-07-04  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/ui/new_book_dialog.rb:

	- Removed the first label ;